--- a/client/src/App.css
+++ b/client/src/App.css
@@ -20,3 +20,13 @@
 .App-link {
   color: #09d3ac;
 }
+
+nav {
+  height: 50px;
+  display: flex;
+  flex-direction: row;
+}
+
+nav a {
+  padding: 20px;
+}
