--- a/client/src/App.css
+++ b/client/src/App.css
@@ -28,6 +28,16 @@
   max-width: 100;
   max-height: 300;
 }
+
+.modal {
+    position: 'absolute';
+    width: 400;
+    background-color: grey;
+    border: '2px solid #000';
+    box-shadow: 5;
+    padding: 2, 4, 3;
+  }
+  
 nav {
   height: 50px;
   display: flex;
