nav bar and login

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -11,28 +11,29 @@ nav a {
   padding: 20px;
 }
 
+* a {
+  color: black;
+  text-decoration: none;
+}
+
 .home {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   width: 100vw;
 }
-/* 
-#walletContainer {
-  display: flex;
-  flex-direction: column;
-  width: 300px;
-  background-color: #dadada;
-  padding-right: 40px;
-  padding-left: 40px;
-  height: 100vh;
-} */
 
 .wallet {
   display: flex;
   flex-direction: row;
+
 }
 
 .wallet div {
   padding: 20px;
+}
+
+.accountInfo {
+  display: flex;
+  flex-direction: row;
 }
