--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,14 +1,37 @@
+body {
+  background-color: #f2f2f2;
+  height: 1000px;
+}
+
 nav {
-  height: 50px;
+  height: 100px;
+  width: 100vw;
+  position: fixed;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  background-color: #dadada;
+  background-color: #1b2136;
+  padding-right: 50px;
 }
 
-nav a {
-  padding: 20px;
+nav h1 {
+  color: white;
+  margin-left: 50px;
+  letter-spacing: 4px;
+  font-size: 36px;
+  font-weight: 300;
+}
+
+#logo {
+  margin-left: 65px;
+  font-size: 22px;
+  color: white;
+  font-display: bold;
+}
+
+h1 {
+  color: #006BE8;
 }
 
 * a {
@@ -21,12 +44,25 @@ nav a {
   flex-direction: row;
   justify-content: space-between;
   width: 100vw;
+  margin-left: 50px;
 }
+
+.stats {
+  margin-top: 100px;
+}
+
+button:focus { outline:none }
 
 .wallet {
   display: flex;
   flex-direction: row;
+  margin-right: 50px;
+}
 
+.wallet p {
+  color: white;
+  font-size: 22px;
+  padding: 20px;
 }
 
 .wallet div {
@@ -36,4 +72,37 @@ nav a {
 .accountInfo {
   display: flex;
   flex-direction: row;
+}
+
+.wallet button {
+  background-color: #006BE8;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  width: 120px;
+  font-size: 26px;
+  color: white;
+  border-radius: 10px;
+}
+
+.topDonations {
+  width: 400px;
+  margin-top: 30px;
+  margin-right: 100px;
+  margin-left: 30px;
+  display: flex;
+  flex-direction: column;
+  padding: 20px;
+  background-color: white;
+  border-radius: 35px;
+}
+
+.topDonations h3 {
+  color: black;
+}
+
+.donationContainer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
 }
