--- a/client/src/App.css
+++ b/client/src/App.css
@@ -13,13 +13,22 @@ nav {
   align-items: center;
   background-color: #1b2136;
   padding-right: 50px;
+  z-index: 10;
 }
 
-nav h1 {
+nav #header {
   color: white;
   margin-left: 50px;
   letter-spacing: 4px;
   font-size: 36px;
+  font-weight: 300;
+}
+
+nav h1 {
+  color: white;
+  margin-right: 50px;
+  letter-spacing: 2px;
+  font-size: 30px;
   font-weight: 300;
 }
 
@@ -85,9 +94,21 @@ button:focus { outline:none }
   border-radius: 10px;
 }
 
+nav button {
+  background-color: #006BE8;
+  border: none;
+  cursor: pointer;
+  padding: 10px;
+  width: 175px;
+  font-size: 26px;
+  color: white;
+  border-radius: 10px;
+  margin-right: 50px;
+}
+
 .topDonations {
   width: 400px;
-  margin-top: 30px;
+  margin-top: 50px;
   margin-right: 100px;
   margin-left: 30px;
   display: flex;
@@ -97,12 +118,37 @@ button:focus { outline:none }
   border-radius: 35px;
 }
 
+.topDonations p {
+  padding-right: 10px;
+}
+
 .topDonations h3 {
   color: black;
+  z-index: 3;
+  text-align: center;
 }
 
 .donationContainer {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
+}
+
+.donationHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
+.chart {
+  margin-top: -50px;
+  z-index: -1;
+}
+
+.Contract {
+  padding-top: 150px;
+}
+
+.Contract p {
+  color: black;
 }
